# alsaloop-for-real-sound-device-redirection

./: .gitignore  CMakeLists.txt  README.md  build.sh  libalsaloopforrealdeviceredirection.pc.in  test.sh
include/: alsaloop.h  loop_dev.h
src/: alsaloop.cpp  loop_dev.cpp  pcmjob.cpp
test/: CMakeLists.txt  main.cpp  test_loop_dev.cpp
test/mocks/: mock_alsaloop.cpp
